Update عملیات حساب مجازی.md

--- a/master/عملیات حساب مجازی.md
+++ b/master/عملیات حساب مجازی.md
@@ -1,4 +1,6 @@
+
 - [مقدمه](#menu)
+- [سقف تراکنش های مالی](#menu)
 - [شارژ کیف پول](#menu)
 - [افزایش موجودی مستقیم](#menu)
 - [انتقال بین حساب صنفی و کیف پول](#menu)
@@ -23,6 +25,38 @@
 
 **تمام امکانات برای عملیات حساب مجازی در پکیج VirtualAccount قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
+
+<div class="box-end">
+</div>
+
+## سقف تراکنش های مالی
+
+سقف روزانه ی تراکنش های مالی شما با توجه به سطح احراز هویت شما تعیین می گردد. برای این منظور عملیات زیر اتفاق می افتد:
+<br/>
+1. کاربر با تایید شماره موبایل خود (از طریق ارسال کد پیامک شده یا بازیابی رمز عبور با کد پیامک شده، به سطح اول می رسد. در این سطح کاربر دارای شرایط مالی زیر است:
+* سقف موجودی: 1 میلیون تومان
+* سقف قابل شارژ در کیف پول، روزانه: 200 هزار تومان
+* سقف قابل انتقال (به کاربر دیگر یا برداشت از کیف پول)، روزانه: 200 هزار تومان
+* سقف برداشت مستقیم از حساب بانکی (direct debit)، روزانه: 200 هزار تومان
+<br/>
+2. کاربر سطح اول می تواند با ثبت کد ملی خود در صورتی که شماره موبایل تایید شده متعلق به کد ملی خودش باشد، به سطح دوم ارتقا پیدا کند. در این سطح کاربر دارای شرایط مالی زیر است:
+* سقف موجودی: 10 میلیون تومان
+* سقف قابل شارژ در کیف پول، روزانه: 3 میلیون تومان
+* سقف قابل انتقال (به کاربر دیگر یا برداشت از کیف پول)، روزانه: 3 میلیون تومان
+* سقف برداشت مستقیم از حساب بانکی (direct debit)، روزانه: 200 هزار تومان
+<br/>
+3. کاربر سطح دوم می تواند با ثبت تاریخ تولد خود به صورت خودکار از ثبت احوال استعلام گردد و به سطح سوم ارتقا پیدا کند. در این سطح کاربر دارای شرایط مالی زیر است:
+* سقف موجودی: 10 میلیون تومان
+* سقف قابل شارژ در کیف پول، روزانه: 3 میلیون تومان
+* سقف قابل انتقال (به کاربر دیگر یا برداشت از کیف پول)، روزانه: 3 میلیون تومان
+* سقف برداشت مستقیم از حساب بانکی (direct debit)، روزانه: 200 هزار تومان
+<br/>
+4. کاربر پاد در هر لحظه می تواند به صورت حضوری مشتری بانک پاسارگاد شده و با در صورت مشتری بودن، با استفاده از احراز هویت اینترنت بانک پاسارگاد به سطح چهارم ارتقا پیدا کند. در این سطح کاربر دارای شرایط مالی زیر است:
+* سقف موجودی: نا محدود
+* سقف قابل شارژ در کیف پول، روزانه: ۵۰ میلیون تومان
+* سقف قابل انتقال (به کاربر دیگر یا برداشت از کیف پول)، روزانه: ۵۰ میلیون تومان
+* سقف برداشت مستقیم از حساب بانکی (direct debit)، روزانه: 200 هزار تومان
+<br/>
 
 <div class="box-end">
 </div>
@@ -4225,4 +4259,3 @@ FanapSDK.getAccountBillWithSign(accessToken, privateCode, 0, 50, userId, keyId, 
 
 <div class="box-end">
 </div>
-
