--- a/master/سپرده بانکی.md
+++ b/master/سپرده بانکی.md
@@ -34,6 +34,7 @@
 |    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
 |    SourceDepositNumber     |    string  |   	شماره سپرده جهت برداشت	   |      |     *   |
 |    TransferMoneyBillNumber     |    string  |   	   |    در صورتیکه سپرده مبدا دارای شناسه قبض است باید این فیلد ارسال شود.  |       |
+|CentralBankTransferDetailType|string|بابت|(عددی بین 1 تا 19) علت انتقال وجه|* |
 |    FileUniqueIdentifier     |    string  |   	   |   شناسه یکتای فایل که حتما باید با ACH شروع شود و از کاراکترهای حرفی و عددی تشکیل شده است.   |     *   |
 |    BatchPayaItemInfos.Amount	     |    string  |   		مبلغ تراکنش	   |   	  |     *   |
 |    BatchPayaItemInfos.BeneficiaryFullName	     |    string  |   		نام و نام خانوادگی ذینفع	   |   	کاراکترهای فارسی ارسال شود   |     *   |
@@ -794,6 +795,7 @@ let getDepositBalanceData = {
 | --------- | -----------------  |-----------------  |-----------------  |-----------------  |
 |    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
 |    Amount     |    number  |   	مبلغ			   |      |   *    |
+|CentralBankTransferDetailType|string|بابت|(عددی بین 1 تا 19) علت انتقال وجه|* |
 |    PaymentId     |    string  |     		   |     |       |
 |    SourceDepositNumber     |    string  |     شماره سپرده مبدا		   |  یکی از موارد SourceDepositNumber  یا SourceSheba اجباری است   |       |
 |    SourceSheba     |    string  |     	شماره شبا مبدا		   |   یکی از موارد SourceDepositNumber  یا SourceSheba اجباری است  |       |
