--- a/master/سپرده بانکی.md
+++ b/master/سپرده بانکی.md
@@ -47,6 +47,30 @@
 |     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
 |     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
 
+**مقایر  فیلد بابت**  
+
+|عنوان بابت|انواع بابت در بانک مرکزی| کد بابت جهت ارسال در سرویس|
+|-------|-----------|--------|
+| واریز حقوق | POSA| 1|
+|امور بیمه خدمات|IOSP|2|
+|امور درمانی|HIPA|3|
+|امور سرمایه‌گذاری و بورس|ISAP|4|
+|امور ارزی|FXAP|5|
+|پرداخت قبوض و تادیه دیون|DRPA|6|
+|امور بازنشستگی|RTAP|7|
+|معاملات اموال منقول|MPTP|8|
+|معاملات اموال غیرمنقول|IMPT|9|
+|مدیریت نقدینگی|LMAP|10|
+|عوارض گمرکی|CDAP|11|
+|تسویه مالیاتی|TCAP|12|
+|سایر خدمات دولتی|GEAC|13|
+|بازپرداخت تسهیلات|LRPA|14|
+|تودیع وثیقه|CCPA|15|
+|هزینه عمومی و امور روزمره|GPAC|16|
+|کمک‌های خیریه|CPAC|17|
+|خرید کالا|GPPC|18|
+|خرید خدمات|SPAC|19|
+
 **خروجی:**
 
 آرایه
