Update عملیات حساب مجازی.md

--- a/master/عملیات حساب مجازی.md
+++ b/master/عملیات حساب مجازی.md
@@ -33,31 +33,16 @@
 
 سقف روزانه ی تراکنش های مالی شما با توجه به سطح احراز هویت شما تعیین می گردد. برای این منظور عملیات زیر اتفاق می افتد:
 <br/>
-1. کاربر با تایید شماره موبایل خود (از طریق ارسال کد پیامک شده یا بازیابی رمز عبور با کد پیامک شده، به سطح اول می رسد. در این سطح کاربر دارای شرایط مالی زیر است:
-* سقف موجودی: 1 میلیون تومان
-* سقف قابل شارژ در کیف پول، روزانه: 200 هزار تومان
-* سقف قابل انتقال (به کاربر دیگر یا برداشت از کیف پول)، روزانه: 200 هزار تومان
-* سقف برداشت مستقیم از حساب بانکی (direct debit)، روزانه: 200 هزار تومان
-<br/>
-2. کاربر سطح اول می تواند با ثبت کد ملی خود در صورتی که شماره موبایل تایید شده متعلق به کد ملی خودش باشد، به سطح دوم ارتقا پیدا کند. در این سطح کاربر دارای شرایط مالی زیر است:
-* سقف موجودی: 10 میلیون تومان
-* سقف قابل شارژ در کیف پول، روزانه: 3 میلیون تومان
-* سقف قابل انتقال (به کاربر دیگر یا برداشت از کیف پول)، روزانه: 3 میلیون تومان
-* سقف برداشت مستقیم از حساب بانکی (direct debit)، روزانه: 200 هزار تومان
-<br/>
-3. کاربر سطح دوم می تواند با ثبت تاریخ تولد خود به صورت خودکار از ثبت احوال استعلام گردد و به سطح سوم ارتقا پیدا کند. در این سطح کاربر دارای شرایط مالی زیر است:
-* سقف موجودی: 10 میلیون تومان
-* سقف قابل شارژ در کیف پول، روزانه: 3 میلیون تومان
-* سقف قابل انتقال (به کاربر دیگر یا برداشت از کیف پول)، روزانه: 3 میلیون تومان
-* سقف برداشت مستقیم از حساب بانکی (direct debit)، روزانه: 200 هزار تومان
-<br/>
-4. کاربر پاد در هر لحظه می تواند به صورت حضوری مشتری بانک پاسارگاد شده و با در صورت مشتری بودن، با استفاده از احراز هویت اینترنت بانک پاسارگاد به سطح چهارم ارتقا پیدا کند. در این سطح کاربر دارای شرایط مالی زیر است:
-* سقف موجودی: نا محدود
-* سقف قابل شارژ در کیف پول، روزانه: ۵۰ میلیون تومان
-* سقف قابل انتقال (به کاربر دیگر یا برداشت از کیف پول)، روزانه: ۵۰ میلیون تومان
-* سقف برداشت مستقیم از حساب بانکی (direct debit)، روزانه: 200 هزار تومان
-<br/>
-
+|سطح مالی|1|2|3|4|5|
+|---|---|---|----|----|----|
+||تایید شماره موبایل|شاهکار/تایید انطباق کدملی و شماره موبایل توسط بانک|ثبت احوال|تطابق چهره|مشتری بانک پاسارگاد|
+|cashin با کارت خود (به زودی)|-|10.000.000|10.000.000|20.000.000|50.000.000|
+|cashin با کارت سایرین|200.000|1.000.000|3.000.000|3.000.000|3.000.000|
+|سقف موجودی|500.000|10.000.000|10.000.000|20.000.000|100.000.000|
+|تراکنش نقدی(انتقال وجه به مخاطب،تسویه)|100.000|100.000|3.000.000|3.000.000|براساس قواعد بانک مرکزی روی سپرده|
+|تراکنش خرید|200.000|3.000.000|3.000.000|10.000.000|براساس قواعد بانک مرکزی روی سپرده|
+|خرید از ذینفع مشخص و یا پذیرندگان تایید شده کیف پولی|500.000|10.000.000|10.000.000|20.000.000|براساس قواعد بانک مرکزی روی سپرده|
+|خرید از محل اعتبار سازمانی|قواعدی که از طرف سازمان اعلام می‌شود|
 <div class="box-end">
 </div>
 
